syntax = "proto3";

package cfk_poc.pipeline;

message DataRow {
    int32 rowNumber = 1;  
    map<string, string> fields = 2;
    string rawData = 3;
}

message DataChunk {
    string jobId = 1;
    string orgId = 2;
    string sourceId = 3;
    int32 chunkNumber = 4;
    repeated DataRow rows = 5;
}

message ProgressUpdate {
    string jobId = 1;
    string serviceName = 2;
    int32 processedCount = 3;
    int32 totalRows = 4;
}

message ValidRowMessage {
    string jobId = 1;
    string orgId = 2;
    string sourceId = 3;
    DataRow data = 4;
    string dataId = 5;
    int64 timestamp = 6;
}